Add ssh-proxy submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "repos/history"]
 	path = repos/history
 	url = https://github.com/autochthe/history.git
+[submodule "repos/ssh-proxy"]
+	path = repos/ssh-proxy
+	url = git@github.com:autochthe/ssh-proxy.git
